Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -5,11 +5,12 @@
       "source": [
         "# 📘 Anleitung: Starten des Notebooks\n",
         "\n",
-        "Dieses Notebook wird von GitHub geladen. Um alle Funktionen zu aktivieren, führen Sie bitte folgende Schritte aus:\n",
+        "Dieses Notebook wird von GitHub geladen. Um die Analyse zu starten, folgen Sie bitte diesen Schritten:\n",
         "\n",
-        "1. **Alles ausführen:** Gehen Sie oben im Menü auf **Laufzeit** → **Alle ausführen**.\n",
+        "1. **Umgebung vorbereiten:** Gehen Sie oben im Menü auf **Laufzeit** (Runtime) → **Alle ausführen** (Run all).\n",
         "2. **Warnung bestätigen:** Wenn das Fenster *\"Warnung: Dieses Notebook wurde nicht von Google erstellt\"* erscheint, klicken Sie auf **„Trotzdem ausführen“**.\n",
         "3. **Berechnung starten:** Sobald das Bedienfeld erscheint, klicken Sie unten auf die grüne Schaltfläche **▶ Ausführen**.\n",
+        "\n",
         "---\n",
         "*Die Warnung ist eine Google-Sicherheitsmaßnahme für GitHub-Dateien. Die grüne Schaltfläche trainiert das KI-Modell und sendet die Prognosen an die App.*"
       ],
@@ -486,9 +487,9 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
+    "accelerator": "TPU",
     "colab": {
-      "gpuType": "T4",
+      "gpuType": "V5E1",
       "provenance": []
     },
     "kernelspec": {
