Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -22,11 +22,10 @@
       "cell_type": "code",
       "source": [
         "# @title\n",
-        "# --- Sticky UI Panel (bleibt immer oben sichtbar) ---\n",
+        "# --- Sticky UI Panel (responsive, mobile friendly) ---\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, HTML, clear_output\n",
         "\n",
-        "# 1) CSS: sticky top bar\n",
         "display(HTML(\"\"\"\n",
         "<style>\n",
         "/* Sticky container */\n",
@@ -42,18 +41,75 @@
         "  box-shadow: 0 8px 24px rgba(0,0,0,0.06);\n",
         "}\n",
         "\n",
-        "/* Make the notebook width nicer */\n",
+        "/* Make notebook width nicer on desktop */\n",
         ".output-area { max-width: 1100px; }\n",
+        "\n",
+        "/* -------- Responsive tweaks -------- */\n",
+        ".lotto-row {\n",
+        "  display: flex;\n",
+        "  gap: 10px;\n",
+        "  flex-wrap: wrap;              /* allow wrap on small screens */\n",
+        "  align-items: center;\n",
+        "}\n",
+        "\n",
+        ".lotto-row > .lotto-btn {\n",
+        "  flex: 0 0 auto;               /* default: keep size */\n",
+        "}\n",
+        "\n",
+        ".lotto-row > .lotto-progress {\n",
+        "  flex: 1 1 320px;              /* progress takes remaining width */\n",
+        "  min-width: 240px;\n",
+        "}\n",
+        "\n",
+        ".lotto-tabs .widget-tab {\n",
+        "  width: 100%;\n",
+        "}\n",
+        "\n",
+        "/* Mobile: stack everything, full-width buttons */\n",
+        "@media (max-width: 520px) {\n",
+        "  #lotto_sticky_bar { padding: 10px; border-radius: 12px; }\n",
+        "  .lotto-row { flex-direction: column; align-items: stretch; }\n",
+        "  .lotto-row > .lotto-btn,\n",
+        "  .lotto-row > .lotto-progress {\n",
+        "    width: 100% !important;\n",
+        "    min-width: 0 !important;\n",
+        "  }\n",
+        "\n",
+        "  /* Make buttons big & readable */\n",
+        "  .lotto-row button {\n",
+        "    height: 46px !important;\n",
+        "    font-size: 15px !important;\n",
+        "    white-space: nowrap !important;   /* do not wrap text */\n",
+        "  }\n",
+        "\n",
+        "  /* Progress label smaller so it fits */\n",
+        "  .lotto-row .widget-label {\n",
+        "    font-size: 12px !important;\n",
+        "  }\n",
+        "\n",
+        "  /* Tabs + outputs a bit taller on mobile */\n",
+        "  .lotto-output {\n",
+        "    height: 300px !important;\n",
+        "  }\n",
+        "  .lotto-logs {\n",
+        "    height: 300px !important;\n",
+        "    font-size: 13px !important;\n",
+        "  }\n",
+        "\n",
+        "  /* Title smaller */\n",
+        "  .lotto-title-main { font-size: 16px !important; }\n",
+        "  .lotto-title-sub  { font-size: 12px !important; }\n",
+        "}\n",
         "</style>\n",
         "\"\"\"))\n",
         "\n",
-        "# 2) Widgets\n",
+        "# ----- Widgets -----\n",
         "title = widgets.HTML(\n",
         "    value=\"\"\"\n",
-        "    <div style=\"display:flex;align-items:center;justify-content:space-between;gap:12px\">\n",
-        "      <div>\n",
-        "        <div style=\"font-size:18px;font-weight:800\">LOTTO 6aus49 – Runner</div>\n",
-        "        <div style=\"font-size:12.5px;color:#4b5563\">Klicke auf ▶ Ausführen. Logs bleiben separat.</div>\n",
+        "    <div>\n",
+        "      <div class=\"lotto-title-main\" style=\"font-size:18px;font-weight:800\">LOTTO 6aus49 – Runner</div>\n",
+        "      <div class=\"lotto-title-sub\" style=\"font-size:12.5px;color:#4b5563\">\n",
+        "        Klicke auf ▶ Ausführen. Logs bleiben separat.\n",
         "      </div>\n",
         "    </div>\n",
         "    \"\"\"\n",
@@ -65,14 +121,18 @@
         "    tooltip=\"Startet den kompletten Lauf\",\n",
         "    layout=widgets.Layout(width=\"170px\", height=\"40px\")\n",
         ")\n",
+        "btn_run.add_class(\"lotto-btn\")\n",
         "\n",
         "btn_clear = widgets.Button(\n",
         "    description=\"🧹 Clear\",\n",
         "    tooltip=\"Leert Ergebnis/Logs\",\n",
         "    layout=widgets.Layout(width=\"120px\", height=\"40px\")\n",
         ")\n",
+        "btn_clear.add_class(\"lotto-btn\")\n",
         "\n",
         "progress = widgets.IntProgress(value=0, min=0, max=100, description=\"Fortschritt:\", bar_style=\"info\")\n",
+        "progress.add_class(\"lotto-progress\")\n",
+        "\n",
         "status = widgets.HTML(value=\"\")\n",
         "\n",
         "out_result = widgets.Output(layout={\n",
@@ -82,24 +142,33 @@
         "    \"height\":\"260px\",\n",
         "    \"overflow\":\"auto\"\n",
         "})\n",
+        "out_result.add_class(\"lotto-output\")\n",
         "\n",
         "log_area = widgets.Textarea(\n",
         "    value=\"\",\n",
         "    placeholder=\"Logs erscheinen hier…\",\n",
         "    layout=widgets.Layout(width=\"100%\", height=\"260px\")\n",
         ")\n",
+        "log_area.add_class(\"lotto-logs\")\n",
         "\n",
         "tabs = widgets.Tab(children=[out_result, log_area])\n",
         "tabs.set_title(0, \"Ergebnis\")\n",
         "tabs.set_title(1, \"Logs\")\n",
         "\n",
-        "controls = widgets.HBox([btn_run, btn_clear, progress], layout=widgets.Layout(gap=\"10px\"))\n",
+        "tabs_box = widgets.VBox([tabs])\n",
+        "tabs_box.add_class(\"lotto-tabs\")\n",
         "\n",
-        "# 3) Wrap into a sticky HTML container\n",
+        "controls = widgets.HBox(\n",
+        "    [btn_run, btn_clear, progress],\n",
+        "    layout=widgets.Layout(gap=\"10px\")\n",
+        ")\n",
+        "controls.add_class(\"lotto-row\")\n",
+        "\n",
+        "# Sticky container + UI\n",
         "display(HTML('<div id=\"lotto_sticky_bar\"></div>'))\n",
-        "display(widgets.VBox([title, controls, status, tabs]))\n",
+        "display(widgets.VBox([title, controls, status, tabs_box], layout=widgets.Layout(gap=\"10px\")))\n",
         "\n",
-        "# 4) Hilfsfunktionen\n",
+        "# ----- Helper -----\n",
         "def ui_set_status(html, kind=\"info\"):\n",
         "    colors = {\n",
         "        \"info\":   (\"#1f2937\", \"#eef2ff\", \"#c7d2fe\"),\n",
@@ -126,7 +195,7 @@
         "        clear_output()\n",
         "\n",
         "btn_clear.on_click(clear_all)\n",
-        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")"
+        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")\n"
       ],
       "metadata": {
         "cellView": "form",
