Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -109,7 +109,7 @@
         "    <div>\n",
         "      <div class=\"lotto-title-main\" style=\"font-size:18px;font-weight:800\">LOTTO 6aus49 – Runner</div>\n",
         "      <div class=\"lotto-title-sub\" style=\"font-size:12.5px;color:#4b5563\">\n",
-        "        Klicke auf ▶ Ausführen. Logs bleiben separat.\n",
+        "        Klicke auf ▶ Ausführen. Ergebnisse werden mit deinem Account synchronisiert.\n",
         "      </div>\n",
         "    </div>\n",
         "    \"\"\"\n",
@@ -195,11 +195,10 @@
         "        clear_output()\n",
         "\n",
         "btn_clear.on_click(clear_all)\n",
-        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")\n"
+        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "F18wNlu-mVPE"
+        "id": "KGB8fmWQD3he"
       },
       "execution_count": null,
       "outputs": []
@@ -214,22 +213,20 @@
         "import json\n",
         "import zipfile\n",
         "import requests\n",
+        "import urllib.parse as up\n",
         "from datetime import datetime\n",
-        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import pytz\n",
-        "\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.model_selection import train_test_split\n",
-        "\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import LSTM, Dense, Bidirectional, Dropout\n",
         "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.callbacks import Callback"
       ],
       "metadata": {
-        "id": "sG-w52P2iWRx"
+        "id": "pfvgYwbhEnXx"
       },
       "execution_count": null,
       "outputs": []
@@ -238,12 +235,6 @@
       "cell_type": "code",
       "source": [
         "# Konfiguration (Backend)\n",
-        "# Hinweis: \"origin\" kann optional per URL-Parameter übergeben werden:\n",
-        "# https://colab.research.google.com/github/.../LOTTO_6aus49_Datei.ipynb?origin=https://example.com\n",
-        "#\n",
-        "# In Colab können wir URL-Parameter oft über JavaScript auslesen.\n",
-        "# Falls das nicht klappt, verwenden wir BACKEND_URL_DEFAULT.\n",
-        "\n",
         "BACKEND_URL_DEFAULT = \"https://apilotto.euroceiling39.ru\"\n",
         "\n",
         "# Modellparameter (wie im Original)\n",
@@ -256,26 +247,8 @@
         "# ----------------------------\n",
         "# Hilfsfunktionen\n",
         "# ----------------------------\n",
-        "def ui_set_status(html, kind=\"info\"):\n",
-        "    # kind: info/success/warn/error\n",
-        "    colors = {\n",
-        "        \"info\":   (\"#1f2937\", \"#eef2ff\", \"#c7d2fe\"),\n",
-        "        \"success\":(\"#065f46\", \"#ecfdf5\", \"#a7f3d0\"),\n",
-        "        \"warn\":   (\"#92400e\", \"#fffbeb\", \"#fcd34d\"),\n",
-        "        \"error\":  (\"#991b1b\", \"#fef2f2\", \"#fecaca\"),\n",
-        "    }\n",
-        "    fg, bg, bd = colors.get(kind, colors[\"info\"])\n",
-        "    status.value = f\"\"\"\n",
-        "    <div style=\"margin-top:10px;padding:10px 12px;border-radius:12px;\n",
-        "                border:1px solid {bd}; background:{bg}; color:{fg}; font-size:13px\">\n",
-        "      {html}\n",
-        "    </div>\n",
-        "    \"\"\"\n",
-        "\n",
         "def download_and_parse_lotto():\n",
-        "    # URL zum Herunterladen des Archivs\n",
         "    url = \"https://www.lotto-bayern.de/static/gamebroker_2/de/download_files/archiv_lotto.zip\"\n",
-        "\n",
         "    tmp_dir = \"/content/tmp_lotto\"\n",
         "    os.makedirs(tmp_dir, exist_ok=True)\n",
         "\n",
@@ -283,13 +256,12 @@
         "    if r.status_code != 200:\n",
         "        raise RuntimeError(f\"Download fehlgeschlagen. Status: {r.status_code}\")\n",
         "\n",
-        "    # ZIP im Speicher öffnen und entpacken\n",
         "    with zipfile.ZipFile(io.BytesIO(r.content)) as z:\n",
         "        z.extractall(tmp_dir)\n",
         "\n",
         "    txt_path = os.path.join(tmp_dir, \"lotto.txt\")\n",
         "    if not os.path.exists(txt_path):\n",
-        "        raise RuntimeError(\"lotto.txt nicht gefunden (ZIP-Inhalt hat sich evtl. geändert).\")\n",
+        "        raise RuntimeError(\"lotto.txt nicht gefunden.\")\n",
         "\n",
         "    with open(txt_path, \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
         "        lines = f.readlines()\n",
@@ -311,28 +283,20 @@
         "                rows.append([datum] + rest7)\n",
         "\n",
         "    df = pd.DataFrame(rows, columns=[\"Datum\",\"Zahl1\",\"Zahl2\",\"Zahl3\",\"Zahl4\",\"Zahl5\",\"Zahl6\",\"Superzahl\"])\n",
-        "\n",
         "    for c in [\"Zahl1\",\"Zahl2\",\"Zahl3\",\"Zahl4\",\"Zahl5\",\"Zahl6\",\"Superzahl\"]:\n",
         "        df[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
         "\n",
-        "    df = df.dropna().reset_index(drop=True)\n",
-        "    if df.empty:\n",
-        "        raise RuntimeError(\"Keine Daten nach Filterung gefunden.\")\n",
-        "    return df\n",
+        "    return df.dropna().reset_index(drop=True)\n",
         "\n",
         "def preprocess_df(df):\n",
-        "    # Datum und Superzahl entfernen\n",
         "    df_numbers = df.drop([\"Datum\", \"Superzahl\"], axis=1).copy()\n",
-        "    # Zeilenweise sortieren (wie im Original)\n",
         "    df_sorted = df_numbers.apply(lambda row: pd.Series(sorted(row.astype(int).tolist())), axis=1)\n",
         "    return df_sorted\n",
         "\n",
         "def create_training_data(df_sorted, window_length):\n",
         "    scaler = StandardScaler().fit(df_sorted)\n",
         "    transformed_df = scaler.transform(df_sorted)\n",
-        "\n",
-        "    n_rows = df_sorted.shape[0]\n",
-        "    n_feat = df_sorted.shape[1]\n",
+        "    n_rows, n_feat = df_sorted.shape\n",
         "\n",
         "    X = np.empty([n_rows - window_length, window_length, n_feat], dtype=float)\n",
         "    y = np.empty([n_rows - window_length, n_feat], dtype=float)\n",
@@ -352,17 +316,13 @@
         "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
         "    model.add(Bidirectional(LSTM(240, return_sequences=False)))\n",
         "    model.add(Dropout(0.2))\n",
-        "\n",
-        "    # Unverändert aus dem Original\n",
         "    model.add(Dense(49))\n",
         "    model.add(Dense(input_shape[1]))\n",
-        "\n",
         "    model.compile(optimizer=Adam(learning_rate=learning_rate), loss=\"mse\", metrics=[\"accuracy\"])\n",
         "    return model\n",
         "\n",
         "def predict_last_window(model, df_sorted, scaler, window_length):\n",
         "    to_predict = df_sorted.tail(window_length)\n",
-        "\n",
         "    if to_predict.shape[0] < window_length:\n",
         "        padding = np.zeros((window_length - to_predict.shape[0], to_predict.shape[1]))\n",
         "        to_predict = np.vstack((padding, to_predict))\n",
@@ -372,41 +332,33 @@
         "    scaled_to_predict = scaler.transform(to_predict)\n",
         "    y_pred = model.predict(np.array([scaled_to_predict]), verbose=0)\n",
         "    predicted = scaler.inverse_transform(y_pred).astype(int)[0]\n",
+        "    return np.clip(predicted, 1, 49)\n",
         "\n",
-        "    # Optional: Bereich 1..49\n",
-        "    predicted = np.clip(predicted, 1, 49)\n",
-        "    return predicted\n",
-        "\n",
-        "def get_origin_from_url_or_default():\n",
-        "    # Versucht, origin aus den Colab-URL-Parametern zu lesen.\n",
-        "    # Wenn nicht möglich, Default verwenden.\n",
+        "def get_url_data():\n",
+        "    \"\"\"Liest userId und origin URL-Parameter via JavaScript aus.\"\"\"\n",
+        "    data = {\"userId\": None, \"origin\": BACKEND_URL_DEFAULT}\n",
         "    try:\n",
-        "        # JavaScript-Bridge: gibt Window.location.search zurück\n",
         "        from google.colab import output\n",
         "        js = \"\"\"\n",
         "        (function() {\n",
         "          return window.location.search || \"\";\n",
         "        })();\n",
         "        \"\"\"\n",
-        "        q = output.eval_js(js)  # z.B. \"?origin=https%3A%2F%2Fexample.com\"\n",
-        "        if q and \"origin=\" in q:\n",
-        "            # sehr einfacher Parser\n",
-        "            import urllib.parse as up\n",
+        "        q = output.eval_js(js)\n",
+        "        if q:\n",
         "            params = up.parse_qs(q.lstrip(\"?\"))\n",
-        "            origin = params.get(\"origin\", [None])[0]\n",
-        "            if origin:\n",
-        "                return origin\n",
+        "            if \"userId\" in params:\n",
+        "                data[\"userId\"] = params[\"userId\"][0]\n",
+        "            if \"origin\" in params:\n",
+        "                data[\"origin\"] = params[\"origin\"][0]\n",
         "    except Exception:\n",
         "        pass\n",
-        "\n",
-        "    return BACKEND_URL_DEFAULT\n",
+        "    return data\n",
         "\n",
         "def send_to_backend(backend_url, payload):\n",
         "    r = requests.post(f\"{backend_url}/api/colab/update\", json=payload, timeout=30)\n",
         "    return r\n",
         "\n",
-        "\n",
-        "from tensorflow.keras.callbacks import Callback\n",
         "\n",
         "class UIProgressCallback(Callback):\n",
         "    def __init__(self, total_epochs, log_fn, progress_widget, base_progress=45, span=35):\n",
@@ -414,24 +366,17 @@
         "        self.total_epochs = total_epochs\n",
         "        self.log_fn = log_fn\n",
         "        self.progress_widget = progress_widget\n",
-        "        self.base = base_progress     # training\n",
-        "        self.span = span              # wie viel Prozent nimmt ein training\n",
+        "        self.base = base_progress\n",
+        "        self.span = span\n",
+        "\n",
         "    def on_train_begin(self, logs=None):\n",
         "        self.log_fn(\"Training gestartet…\")\n",
+        "\n",
         "    def on_epoch_end(self, epoch, logs=None):\n",
         "        logs = logs or {}\n",
         "        ep = epoch + 1\n",
-        "        loss = logs.get(\"loss\", None)\n",
-        "        acc  = logs.get(\"accuracy\", None)\n",
-        "        msg = f\"Epoch {ep}/{self.total_epochs} – loss={loss:.6f}\" if loss is not None else f\"Epoch {ep}/{self.total_epochs}\"\n",
-        "        if acc is not None:\n",
-        "            msg += f\", acc={acc:.6f}\"\n",
-        "        self.log_fn(msg)\n",
-        "\n",
-        "        # Fortschritt updaten\n",
         "        frac = ep / float(self.total_epochs)\n",
         "        self.progress_widget.value = min(100, int(self.base + self.span * frac))\n",
-        "\n",
         "\n",
         "\n",
         "# ----------------------------\n",
@@ -448,6 +393,16 @@
         "    log(\"Starte Pipeline…\")\n",
         "\n",
         "    try:\n",
+        "        # 1. URL Parameter prüfen\n",
+        "        url_data = get_url_data()\n",
+        "        user_id = url_data[\"userId\"]\n",
+        "        backend_url = url_data[\"origin\"]\n",
+        "\n",
+        "        if user_id:\n",
+        "            log(f\"👤 User erkannt: ID {user_id}\")\n",
+        "        else:\n",
+        "            log(\"ℹ️ Kein User gefunden (Globaler Modus)\")\n",
+        "\n",
         "        progress.value = 5\n",
         "        ui_set_status(\"1/5 Lade Lotto-Daten (ZIP) und parse lotto.txt…\", \"info\")\n",
         "        log(\"1/5 Download + Parse lotto.txt…\")\n",
@@ -459,14 +414,13 @@
         "\n",
         "        progress.value = 20\n",
         "        ui_set_status(\"2/5 Vorverarbeitung und Trainingsdaten erstellen…\", \"info\")\n",
-        "        log(\"2/5 Vorverarbeitung + Training-Daten…\")\n",
+        "        log(\"2/5 Vorbereitung…\")\n",
         "        df_sorted = preprocess_df(df_raw)\n",
         "        X, y, scaler = create_training_data(df_sorted, model_params[\"window_length\"])\n",
         "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.12, random_state=24)\n",
         "\n",
         "        progress.value = 35\n",
         "        ui_set_status(\"3/5 Modell erstellen…\", \"info\")\n",
-        "        log(\"3/5 Modell erstellen…\")\n",
         "        input_shape = (model_params[\"window_length\"], X.shape[2])\n",
         "        model = create_model(input_shape)\n",
         "\n",
@@ -474,13 +428,11 @@
         "        model_params_runtime.update({\n",
         "            \"layers\": len(model.layers),\n",
         "            \"optimizer\": str(model.optimizer),\n",
-        "            \"loss\": model.loss,\n",
-        "            \"metrics\": model.metrics_names,\n",
         "        })\n",
         "\n",
         "        progress.value = 45\n",
-        "        ui_set_status(f\"4/5 Training läuft… (epochs={model_params_runtime['epochs']}, batch_size={model_params_runtime['batch_size']})\", \"warn\")\n",
-        "        log(f\"4/5 Training läuft… epochs={model_params_runtime['epochs']}, batch_size={model_params_runtime['batch_size']}\")\n",
+        "        ui_set_status(f\"4/5 Training läuft… ({model_params_runtime['epochs']} Epochen)\", \"warn\")\n",
+        "        log(f\"4/5 Training Deep Learning Models…\")\n",
         "\n",
         "        cb = UIProgressCallback(\n",
         "            total_epochs=model_params_runtime[\"epochs\"],\n",
@@ -490,7 +442,6 @@
         "            span=35\n",
         "        )\n",
         "\n",
-        "        # WICHTIG: verbose=0, damit keine endlosen Logs in der Zelle erscheinen\n",
         "        history = model.fit(\n",
         "            x=X_train,\n",
         "            y=y_train,\n",
@@ -502,7 +453,7 @@
         "\n",
         "        progress.value = 82\n",
         "        ui_set_status(\"Training fertig. Evaluiere…\", \"info\")\n",
-        "        log(\"Training fertig. Evaluiere…\")\n",
+        "        log(\"Training beendet. Berechne Scores…\")\n",
         "        train_loss, train_accuracy = model.evaluate(X_train, y_train, verbose=0)\n",
         "        test_loss, test_accuracy = model.evaluate(X_test, y_test, verbose=0)\n",
         "\n",
@@ -510,17 +461,16 @@
         "\n",
         "        with out_result:\n",
         "            print(\"\\n📌 Metriken\")\n",
-        "            print(f\"Train Loss: {train_loss}, Train Accuracy: {train_accuracy}\")\n",
-        "            print(f\"Test  Loss: {test_loss},  Test  Accuracy: {test_accuracy}\")\n",
+        "            print(f\"Train Loss: {train_loss:.4f}, Train Acc: {train_accuracy:.4f}\")\n",
+        "            print(f\"Test  Loss: {test_loss:.4f},  Test  Acc: {test_accuracy:.4f}\")\n",
         "            print(\"\\n🎯 Vorhergesagte Zahlen:\", predicted_numbers)\n",
         "\n",
         "        progress.value = 90\n",
         "        ui_set_status(\"5/5 Sende Ergebnisse ans Backend…\", \"info\")\n",
-        "        log(\"5/5 Sende Ergebnisse ans Backend…\")\n",
-        "        backend_url = get_origin_from_url_or_default()\n",
-        "        log(f\"Backend URL: {backend_url}\")\n",
+        "        log(f\"5/5 Sende an App ({backend_url})...\")\n",
         "\n",
         "        payload = {\n",
+        "            \"userId\": user_id,  # WICHTIG: User ID\n",
         "            \"numbers\": predicted_numbers.tolist() if hasattr(predicted_numbers, \"tolist\") else list(predicted_numbers),\n",
         "            \"train\": {\"loss\": float(train_loss), \"accuracy\": float(train_accuracy)},\n",
         "            \"test\": {\"loss\": float(test_loss), \"accuracy\": float(test_accuracy)},\n",
@@ -531,34 +481,33 @@
         "        resp = send_to_backend(backend_url, payload)\n",
         "\n",
         "        if resp.ok:\n",
-        "            ui_set_status(f\"✅ Gesendet! Backend: <code>{backend_url}</code><br>Antwort: {resp.status_code}\", \"success\")\n",
-        "            log(f\"✅ Gesendet! HTTP {resp.status_code}\")\n",
+        "            ui_set_status(f\"✅ Gesendet! Schaue jetzt in deine App.\", \"success\")\n",
+        "            log(f\"✅ Erfolgreich gesendet! Status: {resp.status_code}\")\n",
         "            progress.value = 100\n",
         "        else:\n",
-        "            ui_set_status(f\"❌ Fehler beim Senden: {resp.status_code}<br><pre style='white-space:pre-wrap'>{resp.text[:800]}</pre>\", \"error\")\n",
-        "            log(f\"❌ Fehler beim Senden: HTTP {resp.status_code}\")\n",
-        "            log(resp.text[:800])\n",
+        "            ui_set_status(f\"❌ Server-Fehler: {resp.status_code}\", \"error\")\n",
+        "            log(f\"❌ Fehler beim Senden: {resp.text[:200]}\")\n",
         "            progress.value = 100\n",
         "\n",
         "    except Exception as e:\n",
         "        ui_set_status(f\"⚠️ Lauf fehlgeschlagen: <code>{str(e)}</code>\", \"error\")\n",
-        "        log(f\"⚠️ Fehler: {e}\")\n",
+        "        log(f\"CRITICAL ERROR: {e}\")\n",
         "        progress.value = 100\n",
         "\n",
         "btn_run.on_click(run_pipeline)\n",
-        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")\n"
+        "ui_set_status(\"Bereit. Authentifiziert & Warten auf Start.\", \"info\")"
       ],
       "metadata": {
-        "id": "eYx8hQO-UhVs"
+        "id": "k626fPm6Dihf"
       },
       "execution_count": null,
       "outputs": []
     }
   ],
   "metadata": {
-    "accelerator": "TPU",
+    "accelerator": "GPU",
     "colab": {
-      "gpuType": "V5E1",
+      "gpuType": "T4",
       "provenance": []
     },
     "kernelspec": {
